force-app/main/default/objects/MassiveFieldsObjectMap__c/MassiveFieldsObjectMap__c.object-meta.xml
<CustomObject>
    <label>MassiveFieldsObjectMap</label>
    <nameField>
        <label>MassiveFieldsObjectMap Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MassiveFieldsObjectMap</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>