force-app/main/default/objects/MassiveFieldsObjectMap__c/fields/labelField__c.field-meta.xml
<CustomField>
    <fullName>labelField__c</fullName>
    <label>labelField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>