force-app/main/default/objects/MassiveFieldsObjectMap__c/fields/nameField__c.field-meta.xml
<CustomField>
    <fullName>nameField__c</fullName>
    <label>nameField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>