force-app/main/default/objects/MassiveFieldsObjectMap__c/fields/objectType__c.field-meta.xml
<CustomField>
    <fullName>objectType__c</fullName>
    <label>objectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>