force-app/main/default/objects/MassiveFieldsObjectMap__c/fields/processType__c.field-meta.xml
<CustomField>
    <fullName>processType__c</fullName>
    <label>processType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>